# moai-dev

./: .gitignore  README.md
3rdparty-android/admob/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/appsflyer/: classpath.xml  manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/chartboost-6.1.0/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/facebook/: manifest_declarations.xml
3rdparty-android/facebook-4.24.0/: classpath.xml  manifest_declarations.xml
3rdparty-android/firebase/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/firebase-invites/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/flurry-ads/: .DS_Store.orig  classpath.xml
3rdparty-android/flurryads/: manifest_declarations.xml
3rdparty-android/gamesparks/: manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/google-cloud-messaging/: classpath.xml  manifest_declarations.xml  manifest_permissions.xml
3rdparty-android/google-push/: manifest_declarations.xml
3rdparty-android/vungle-5.3.2/: CHANGELOG.md
3rdparty-android/yandex-appmetrica/: manifest_declarations.xml  manifest_permissions.xml
cmake/: CMakeLists.txt
cmake/cmake-modules/: module-config.cmake  module-setup.cmake  platform-android.cmake
cmake/hosts/host-modules/: CMakeLists.txt
cmake/libmoai/: CMakeLists.txt
cmake/libmoai/config/: moai_config.h.in
cmake/libmoai/moai-android/: CMakeLists.txt  android-module.cmake
cmake/libmoai/moai-android/moai-android-admob/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-appsflyer/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-chartboost/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-crashlytics/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-facebook/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-firebase/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-firebase-config/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-firebase-invites/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-flurry/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-flurry-ads/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-fyber/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-gamesparks/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-google-analytics/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-google-cloud-messaging/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-google-play-services-games/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-unity-ads/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-vungle/: CMakeLists.txt
cmake/libmoai/moai-android/moai-android-yandex-appmetrica/: CMakeLists.txt
cmake/libmoai/moai-ct-util/: CMakeLists.txt
cmake/libmoai/moai-fmod-studio/: CMakeLists.txt
cmake/libmoai/moai-iphone/: CMakeLists.txt
cmake/libmoai/moai-iphone/moai-ios-facebook/: CMakeLists.txt
cmake/libmoai/moai-luaext/: CMakeLists.txt
cmake/libmoai/moai-spine-v3/: CMakeLists.txt
cmake/libmoai/moai-util/: CMakeLists.txt
samples/fmod-beat-detection/: main.lua
samples/imgui/: main.lua
samples/input-callbacks/: main.lua
samples/input-gamecontroller/: gamecontrollerdb.txt  main.lua
src/config-default/: moai_config.h
src/ct-util/: CTHelper.cpp  CTHelper.h  CTPerrySQLite.cpp  CTPerrySQLite.h  CTUtil.cpp  CTUtil.h  MOAIColorBlender.cpp  MOAIColorBlender.h  host.cpp  host.h
src/host-chrome/: MOAIApp.h
src/host-ios-messages/: MOAIMessagesExtension.h  MOAIMessagesExtension.mm  MOAIMessagesView.h  MOAIMessagesView.mm  MOAIView.h  MOAIView.mm  MessagesViewController.h  MessagesViewController.m
src/host-modules/: aku_modules.cpp  aku_modules.h  aku_modules_android.cpp  aku_modules_android.h  aku_modules_android_config.h  aku_modules_config.h  aku_modules_ios.h  aku_modules_ios.mm  aku_modules_ios_config.h
src/host-sdl/: SDLGameController.cpp  SDLGameController.h  SDLHost.cpp  SDLHostMain.cpp  SDLImGuiHelper.cpp  SDLImGuiHelper.h  SDLJoystick.cpp
src/lua-headers/: moai.lua  moai_lua.h
src/moai-android-admob/: MOAIAdMobAndroid.cpp  MOAIAdMobAndroid.h  host.cpp  host.h
src/moai-android-appsflyer/: MOAIAppsFlyerAndroid.cpp  MOAIAppsFlyerAndroid.h  host.cpp  host.h
src/moai-android-chartboost/: MOAIChartBoostAndroid.cpp  MOAIChartBoostAndroid.h
src/moai-android-crashlytics/: MOAICrashlyticsAndroid.cpp  MOAICrashlyticsAndroid.h  host.cpp  host.h
src/moai-android-facebook/: MOAIFacebookAndroid.cpp  MOAIFacebookAndroid.h
src/moai-android-firebase/: MOAIFirebaseAndroid.cpp  MOAIFirebaseAndroid.h  host.cpp  host.h
src/moai-android-firebase-config/: MOAIFirebaseConfigAndroid.cpp  MOAIFirebaseConfigAndroid.h  host.cpp  host.h
src/moai-android-firebase-invites/: MOAIFirebaseInvitesAndroid.cpp  MOAIFirebaseInvitesAndroid.h  host.cpp  host.h
src/moai-android-flurry/: MOAIFlurryAndroid.cpp  MOAIFlurryAndroid.h
src/moai-android-flurry-ads/: MOAIFlurryAdsAndroid.cpp  MOAIFlurryAdsAndroid.h  MoaiFlurryAds.java  host.cpp
src/moai-android-fyber/: MOAIFyberAndroid.cpp  MOAIFyberAndroid.h  host.cpp  host.h
src/moai-android-gamesparks/: MOAIGameSparksAndroid.cpp  MOAIGameSparksAndroid.h  host.cpp  host.h
src/moai-android-google-analytics/: MOAIGoogleAnalyticsAndroid.cpp  MOAIGoogleAnalyticsAndroid.h  host.cpp  host.h
src/moai-android-google-cloud-messaging/: MOAIGoogleCloudMessagingAndroid.cpp  MOAIGoogleCloudMessagingAndroid.h  MoaiGoogleCloudMessaging.java  MoaiGoogleCloudMessagingIntentService.java  MoaiGoogleCloudMessagingReceiver.java  host.cpp  host.h
src/moai-android-google-play-services/: MOAIGooglePlayServicesAndroid.cpp  MOAIGooglePlayServicesAndroid.h
src/moai-android-google-play-services-games/: MOAIGooglePlayServicesGamesAndroid.cpp  MOAIGooglePlayServicesGamesAndroid.h  MoaiGooglePlayServicesGames.java  host.cpp  host.h
src/moai-android-unity-ads/: host.cpp  host.h  (+2 more)
vs2015/: .gitignore  moai.sln
(+518 files in other folders)
